--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -177,7 +177,7 @@ p {
   margin-top: 15px;
   text-align: center;
   cursor: pointer;
-  color: #007bff;
+  color: #ffffff;
 }
 
 p:hover {
@@ -190,43 +190,105 @@ p:hover {
 }
 
 /*patient dashboard */
+.devider{
+  display: flex;
+}
 .container {
   display: flex;
+  width: 100%;
 }
 
 .sidebar {
-  width: 250px;
-  background-color: #f0f0f0;
+  width: min-content;
   padding: 20px;
-}
-
-.sidebar h2 {
-  margin-bottom: 20px;
-}
-
-.sidebar ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.sidebar ul li {
-  margin-bottom: 10px;
-}
-
-.sidebar ul li a {
-  text-decoration: none;
-  color: #333;
-}
-
-.sidebar ul li a:hover {
-  color: #555;
+  height: 100vh;
+  background-color: #5ca6ef;
 }
 
 .content {
   flex: 1;
   padding: 20px;
+  width: 100%;
+  
 }
 
-/* Add more styling as needed */
+ul {
+  list-style-type: none;
+  padding: 0;
+  
+}
 
+li {
+  cursor: pointer;
+  padding: 10px 0;
+  color: #ffffff;
+  font-size: larger;
+}
 
+li.active {
+  color: rgb(236, 10, 10); /* Change color for active tab */
+  font-weight: bold; /* Bold font for active tab */
+}
+h2{
+  color: #e5e510;
+}
+
+/*search doctor*/
+.searchspace{
+  width: 60%;
+}
+.search-container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.search-input {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-select {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.search-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.consultants-list {
+  margin-top: 20px;
+}
+
+.consultants-list ul {
+  list-style: none;
+  padding: 0;
+}
+
+.consultants-list li {
+  background-color: #6961cf;
+  padding: 20px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(39, 11, 199, 0.1);
+}
+
+.consultants-list h3 {
+  margin-top: 0;
+  margin-bottom: 10px;
+}
+
+.consultants-list p {
+  margin: 5px 0;
+}
