--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -413,10 +413,9 @@ p{
   
 }
 .consultant-card{
-  background-color: #a2a754;
+  background-color: #ceadde;
   margin-bottom: 10px;
   padding: 20px;
-  opacity: 80%;
   width: max-content;
 }
 
@@ -466,5 +465,32 @@ input[type="time"]
   border-radius: 5px;
 }
 
-/* Adjust styles as needed */
+/* disease prediction */
+.container3 {
+  max-width:max-content;
+  margin-left: 20%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.options {
+  margin-bottom: 20px;
+  display: flex; /* Use flexbox */
+  flex-wrap: wrap; /* Allow wrapping */
+  color: #1df127;
+}
+
+.checkbox-option {
+  margin-right: 20px; /* Add spacing between options */
+}
+
+.checkbox-option input[type="checkbox"] {
+  margin-right: 5px; /* Adjust checkbox spacing */
+}
+
+.checkbox-option label {
+  font-size: 16px;
+}
+
 
